barista-service/src/main/fabric8/barista-deployment.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: barista-service
spec:
  replicas: 1
  strategy:
    rollingParams:
      timeoutSeconds: 10800
    type: Rolling
  template:
    metadata:
      labels:
        app: barista-service
        deploymentconfig: barista-service
        group: com.redhat.microservices
        provider: fabric8
        runtime: thorntail
        version: '1.0'
    spec:
      ## Insert Volumes here
      volumes:
        - name: barista-config-volume
          configMap:
            name: barista-config-file
            items:
              - key: "barista-config"
                path: "barista-config.yml"

      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: JAVA_APP_DIR
              value: /deployments
            - name: GC_MAX_METASPACE_SIZE
              value: '256'
            - name: JAVA_OPTIONS
              value: "-server -Djava.net.preferIPv4Stack=true -Dswarm.project.stage=production -Dswarm.project.stage.file=file:///app/config/barista-config.yml"
          ## Insert Volume Mounts here
          volumeMounts:
            - name: barista-config-volume
              mountPath: /app/config

          name: barista-service
          image: barista-service:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          securityContext:
            privileged: false

  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - barista-service
        from:
          kind: ImageStreamTag
          name: barista-service:latest
      type: ImageChange
