barista-service/src/main/fabric8/barista-route.yml
apiVersion: apps.openshift.io/v1
kind: Route
metadata:
  name: barista-service
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: barista-service
